--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: rgb(67,20,7);
+  background: -moz-radial-gradient(circle, rgba(67,20,7,1) 0%, rgba(3,7,18,1) 50%);
+  background: -webkit-radial-gradient(circle, rgba(67,20,7,1) 0%, rgba(3,7,18,1) 50%);
+  background: radial-gradient(circle, rgba(67,20,7,1) 0%, rgba(3,7,18,1) 50%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#431407",endColorstr="#030712",GradientType=1);
+  @apply h-screen w-full
 }
