--- a/app/globals.css
+++ b/app/globals.css
@@ -8,5 +8,33 @@ body {
   background: -webkit-radial-gradient(circle, rgba(67,20,7,1) 0%, rgba(3,7,18,1) 50%);
   background: radial-gradient(circle, rgba(67,20,7,1) 0%, rgba(3,7,18,1) 50%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#431407",endColorstr="#030712",GradientType=1);
-  @apply h-screen w-full
+  @apply h-screen w-full;
+  scroll-behavior: smooth;
+}
+
+@keyframes card-in {
+  0% {
+    transform: translateY(100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes card-in-right {
+  0% {
+    transform: translateX(100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+
+.coffeecard {
+  animation: card-in 0.5s ease-in-out;
 }
