--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html{
+  color-scheme: light;
+}
+
 @media (prefers-color-scheme: dark){
   body {
     background: rgb(67,20,7);
@@ -9,14 +13,14 @@
     background: -webkit-radial-gradient(circle, rgba(67,20,7,1) 0%, rgba(3,7,18,1) 50%);
     background: radial-gradient(circle, rgba(67,20,7,1) 0%, rgba(3,7,18,1) 50%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#431407",endColorstr="#030712",GradientType=1);
-    @apply min-h-screen w-full;
+    @apply w-full min-h-screen;
     scroll-behavior: smooth;
   }
 }
 
 @media (prefers-color-scheme: light){
 body{
-  @apply min-h-screen w-full bg-yellow-50;
+  @apply w-full min-h-screen bg-yellow-50;
   scroll-behavior: smooth;
 }
 }
