--- a/app/globals.css
+++ b/app/globals.css
@@ -51,3 +51,29 @@ body{
 .coffeecard {
   animation: card-in 0.5s ease-in-out;
 }
+
+#desc:checked ~ .arrow {
+  animation: rotate 0.5s forwards ease-in-out;
+}
+
+#desc:not(:checked) ~ .arrow {
+  animation: rotate-reverse 0.5s forwards ease-in-out;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate3d(1, 0, 0, 0deg);
+  }
+  100% {
+    transform: rotate3d(1, 0, 0, 180deg);
+  }
+}
+
+@keyframes rotate-reverse {
+  0% {
+    transform: rotate3d(1, 0, 0, 180deg);
+  }
+  100% {
+    transform: rotate3d(1, 0, 0, 360deg);
+  }
+}
