--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@ html{
 
 @media (prefers-color-scheme: dark){
   body {
+    color-scheme: light;
     background: rgb(67,20,7);
     background: -moz-radial-gradient(circle, rgba(67,20,7,1) 0%, rgba(3,7,18,1) 50%);
     background: -webkit-radial-gradient(circle, rgba(67,20,7,1) 0%, rgba(3,7,18,1) 50%);
