--- a/app/globals.css
+++ b/app/globals.css
@@ -64,3 +64,11 @@ body{
     transform: rotate3d(1, 0, 0, 360deg);
   }
 }
+
+.submenu{
+  display:none
+}
+
+.supermenu:hover > .submenu {
+  display: block;
+}
